Fix top-bottom spacing issue

--- a/blocks/case-study-excerpt/style.scss
+++ b/blocks/case-study-excerpt/style.scss
@@ -1,3 +1,7 @@
+.entry-content > .case-study-wrapper {
+	margin: 3em auto;
+}
+
 .case-study-wrapper {
 	display: grid;
 	grid-column-gap: 40px;
